--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -44,3 +44,14 @@ layout: page
 		{% endif %}
 	</div>
 </div>
+
+<div id="disqus_thread"></div>
+<script>
+	(function() { // DON'T EDIT BELOW THIS LINE
+	var d = document, s = d.createElement('script');
+	s.src = 'https://planner-2.disqus.com/embed.js';
+	s.setAttribute('data-timestamp', +new Date());
+	(d.head || d.body).appendChild(s);
+	})();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
