--- a/_sass/elements.scss
+++ b/_sass/elements.scss
@@ -46,8 +46,8 @@ h3 {
 
 
 p, address {
-	font-size: 1.38em;
-	color: #666;
+	font-size: 18px;
+	color: #303336;
 	margin-bottom: 20px;
 	font-weight: 300;
 	line-height: 1.4em;
