Add Planner feactures

--- a/_sass/landing-page.scss
+++ b/_sass/landing-page.scss
@@ -36,6 +36,15 @@
 	}
 }
 
+.list {
+	li {
+		font-weight: 300;
+		margin-bottom: 6px;
+		font-size: 18px;
+    	color: #303336;
+	}
+}
+
 .hero {
 	color: #ffffff;
     text-align: center;
