--- a/_sass/blog.scss
+++ b/_sass/blog.scss
@@ -138,3 +138,12 @@
 		right: -3px;
 	}
 }
+
+.keyboardkey {
+    color: #fff;
+    background: rgba(48,51,54,.85);
+    border-radius: .3em;
+    font-size: 85%;
+    padding: 3px 6px 4px;
+    min-width: 12px;
+}
