--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,8 @@
 		{% feed_meta %}
 		
 		<link rel="stylesheet" href="{{ site.baseurl }}/css/screen.css">
+		<link rel="stylesheet" href="//use.fontawesome.com/releases/v5.13.0/css/all.css">
+
 		<link rel="icon" type="image/png" href="{{ site.baseurl }}/favicon.png">
 
 		{% if jekyll.environment == 'production' and site.google_analytics_key != '' %}
