--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,9 @@
 		
 		<link rel="stylesheet" href="{{ site.baseurl }}/css/screen.css">
 		<link rel="stylesheet" href="//use.fontawesome.com/releases/v5.13.0/css/all.css">
-
+		<style>
+			@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap');
+		</style>
 		<link rel="icon" type="image/png" href="{{ site.baseurl }}/favicon.png">
 
 		{% if jekyll.environment == 'production' and site.google_analytics_key != '' %}
